[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faceblur"
description = "detecção e anonimização de faces"
version = "1.0.0"
authors = [
    { name = "Marciel Vinicius de Lara", email = "marcielviniciusdelara@gmail.com" },
    { name = "Patrick Cherubini Paludo", email = "patrick.paludo@gmail.com" }
]
readme = "README.md"
dependencies = [
    "opencv-python",
    "imutils"
]
